deploy/doorworker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doorworker
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "doorworker.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: doorworker
            port:
              number: 80
  - host: "doorworker"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: doorworker
            port:
              number: 80
